[gd_scene load_steps=8 format=3 uid="uid://bpj5phawbik74"]

[ext_resource type="Script" path="res://Scripts/Competition/CardNode.gd" id="1_0d56d"]
[ext_resource type="Shader" path="res://Shaders/decay.gdshader" id="2_j5bg3"]
[ext_resource type="Texture2D" uid="uid://bskkwq0uiyvm3" path="res://Art Assets/card/card_border.png" id="3_5grkc"]
[ext_resource type="Texture2D" uid="uid://d107gqudwn7wk" path="res://Art Assets/card/backs/back_default.png" id="4_86n6q"]
[ext_resource type="Texture2D" uid="uid://cxrs8kr2ksviy" path="res://Art Assets/card/card_art/chickpeas.png" id="4_tipb4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nl0cc"]
resource_local_to_scene = true
shader = ExtResource("2_j5bg3")
shader_parameter/t = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1204"]
size = Vector2(280, 400)

[node name="CardNode" type="Node2D"]
material = SubResource("ShaderMaterial_nl0cc")
script = ExtResource("1_0d56d")

[node name="ScaleBottomUp" type="Node2D" parent="."]
position = Vector2(0, 200)

[node name="ScaleCenter" type="Node2D" parent="ScaleBottomUp"]
position = Vector2(0, -200)

[node name="Front" type="Node2D" parent="ScaleBottomUp/ScaleCenter"]
use_parent_material = true

[node name="TextureRect" type="TextureRect" parent="ScaleBottomUp/ScaleCenter/Front"]
use_parent_material = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -200.0
offset_right = 140.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_5grkc")

[node name="NameHolder" type="Control" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 8.0
offset_right = 132.0
offset_bottom = 32.0
grow_horizontal = 2
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect/NameHolder"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Chickpeas[/center]"

[node name="ImageHolder" type="Control" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 8.0
offset_right = 132.0
offset_bottom = 196.0
grow_horizontal = 2
mouse_filter = 1

[node name="ImageTextureRect" type="TextureRect" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect/ImageHolder"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tipb4")
expand_mode = 3

[node name="TextHolder" type="Control" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect"]
use_parent_material = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -180.0
offset_right = 132.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ScaleBottomUp/ScaleCenter/Front/TextureRect/TextHolder"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "If the next ingredient is a [color=red]SPICE[/color], it provides double bonuses to other ingredients."

[node name="Back" type="Sprite2D" parent="ScaleBottomUp/ScaleCenter"]
visible = false
use_parent_material = true

[node name="TextureRect" type="TextureRect" parent="ScaleBottomUp/ScaleCenter/Back"]
use_parent_material = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -200.0
offset_right = 140.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_86n6q")

[node name="Area2D" type="Area2D" parent="ScaleBottomUp/ScaleCenter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaleBottomUp/ScaleCenter/Area2D"]
shape = SubResource("RectangleShape2D_e1204")

[connection signal="mouse_entered" from="ScaleBottomUp/ScaleCenter/Area2D" to="." method="onMouseEnter"]
[connection signal="mouse_exited" from="ScaleBottomUp/ScaleCenter/Area2D" to="." method="onMouseExit"]
